--- a/deploy/index.html
+++ b/deploy/index.html
@@ -9,6 +9,17 @@
 </head>
 
 <body>
+<header>
+   <section>
+    <img src="img/logo.svg" alt="logo">
+   </section>
+   <nav></nav>
+</header>  
+
+<section>
+    <img src="img/hero1.jpg" alt="man with dog">
+</section>  
+
     <script src="js/scripts-min.js"></script>
 </body>
 
