--- a/deploy/index.html
+++ b/deploy/index.html
@@ -17,7 +17,46 @@
 </header>  
 
 <section>
-    <img src="img/hero1.jpg" alt="man with dog">
+    <input type="text" placeholder="Search our animals">
+    <button>
+        <img src="img/search.svg" alt="search button">
+    </button>
+</section>  
+
+<section>
+    <section>
+        <img src="img/hero1.jpg" alt="man with dog">
+    </section>
+    <section>
+        <section>
+            <p>
+            <h2><b>Want to work with us?</b></h2>
+            Click here to learn how
+            </p>
+        </section>
+        <section>
+            <button>
+            <h3>Details</h3>
+            <img src="img/arrow.svg" alt="arrow">
+            </button>
+        </section>
+    </section>
+    <section>
+        <section>
+            <p>
+                <b>Location:</b> Northeast Adoption Center
+            </p>
+            <p>
+                <b>Hours:</b> Tues-Sat 9AM-5PM
+            </p>
+        </section>
+        <section>
+            <button>
+            <h3>Details</h3>
+            <img src="img/arrow.svg" alt="arrow">
+        </button>
+        </section>
+    </section>
 </section>  
 
     <script src="js/scripts-min.js"></script>
