--- a/deploy/index.html
+++ b/deploy/index.html
@@ -59,6 +59,23 @@
     </section>
 </section>  
 
+<section>
+    <section>
+            <aside><img src="img/adopt.png" alt="white dog"></aside>
+            <h1>Planning to Adopt?</h1>
+            <button>Start Here</button>
+    </section>
+    <section>
+        <aside><img src="img/vet.png" alt="cat getting checkup"></aside>
+        <h1>Need a Vet?</h1>
+        <button>Start Here</button>
+    </section>
+</section>
+
+<section>
+    <aside><img src="img/hero3.jpg" alt="kid with dog"></aside>
+</section> 
+
     <script src="js/scripts-min.js"></script>
 </body>
 
