finished base html

--- a/deploy/index.html
+++ b/deploy/index.html
@@ -117,6 +117,45 @@
     </section>
 </section> 
 
+<footer>
+    <section>
+        <h3>Locations</h3>
+        <section>
+            <p><b>Old City</b></p>
+            <img src="img/location-arrow.svg" alt="location arrow">
+            <p>100 N. 2nd Street (at Arch)<br>Philadelphia, PA 191063</p>
+            <img src="img/mobile-phone.svg" alt="phone icon">
+            <p>215-238-9901</p>
+        </section>
+        <section>
+            <p><b>Northeast Adoption Center</b></p>
+            <img src="img/location-arrow.svg" alt="location arrow">
+            <p>1810 Grant Avenue<br>Philadelphia, PA 19115</p>
+            <img src="img/mobile-phone.svg" alt="phone icon">
+            <p>215-545-9600</p>
+        </section>
+        <section>
+            <p><b>Wellness Clinic</b></p>
+            <img src="img/location-arrow.svg" alt="location arrow">
+            <p>2900 Grays Ferry Avenue<br>Philadelphia, PA 19146</p>
+            <img src="img/mobile-phone.svg" alt="phone icon">
+            <p>215-298-9680</p>
+        </section>
+    </section>
+    <section>
+        <h3>Newsletter Sign Up</h3>
+        <input type="text" placeholder="Email address">
+        <button><p><b>Sign Up</b></p></button>
+    </section>
+    <section>
+        <h3>Follow Us</h3>
+        <img src="img/youtube.svg" alt="youtube icon">
+        <img src="img/twitter.svg" alt="twitter icon">
+        <img src="img/instagram.svg" alt="instagram icon">
+        <img src="img/facebook.svg" alt="facebook icon">
+    </section>
+</footer>
+
     <script src="js/scripts-min.js"></script>
 </body>
 
