--- a/deploy/index.html
+++ b/deploy/index.html
@@ -9,24 +9,30 @@
 </head>
 
 <body>
-<header>
+<header class="css-grid-global">
+   <div>
    <section>
     <img src="img/logo.svg" alt="logo">
    </section>
    <nav></nav>
+   </div>
 </header>  
 
-<section>
+<section class="css-grid-global">
+    <div>
     <input type="text" placeholder="Search our animals">
     <button>
         <img src="img/search.svg" alt="search button">
     </button>
+</div>
 </section>  
 
 <section>
-    <section>
+    <section class="heroes">
         <img src="img/hero1.jpg" alt="man with dog">
     </section>
+    <section class="css-grid-global">
+    <div>
     <section>
         <section>
       
@@ -57,9 +63,12 @@
         </button>
         </section>
     </section>
+    </div>
+    </section>
 </section>  
 
-<section>
+<section class="css-grid-global">
+    <div>
     <section>
             <aside><img src="img/adopt.png" alt="white dog"></aside>
             <h1>Planning to Adopt?</h1>
@@ -70,15 +79,17 @@
         <h1>Need a Vet?</h1>
         <button>Start Here</button>
     </section>
+</div>
 </section>
 
-<ul>
+<ul class="heroes">
     <li><img src="img/hero3.jpg" alt="kid with dog"></li>
     <li><img src="img/hero2.jpg" alt="woman kissing cat"></li>
     <li><img src="img/hero4.jpg" alt="cat being held"></li>
 </ul> 
 
-<section>
+<section class="css-grid-global">
+<div>
 <h1>What's New</h1>
 <ul>
     
@@ -118,6 +129,7 @@
         <button><b>Read More</b></button>
     </li>
 </ul>
+</div>
 </section> 
 
 <footer>
