added some color and validated html

--- a/deploy/index.html
+++ b/deploy/index.html
@@ -132,7 +132,8 @@
 </div>
 </section> 
 
-<footer>
+<footer class="css-grid-global">
+    <div>
     <section>
         <h3>Locations</h3>
         <section>
@@ -169,6 +170,7 @@
         <img src="img/instagram.svg" alt="instagram icon">
         <img src="img/facebook.svg" alt="facebook icon">
     </section>
+</div>
 </footer>
 
     <script src="js/scripts-min.js"></script>
