--- a/deploy/index.html
+++ b/deploy/index.html
@@ -36,7 +36,7 @@
     <section>
         <section>
       
-            <h2><b>Want to work with us?</b></h2>
+            <h3><b>Want to work with us?</b></h3>
             Click here to learn how
            
         </section>
@@ -69,17 +69,29 @@
 
 <section class="css-grid-global">
     <div>
-    <section>
-            <aside><img src="img/adopt.png" alt="white dog"></aside>
-            <h1>Planning to Adopt?</h1>
-            <button>Start Here</button>
-    </section>
-    <section>
-        <aside><img src="img/vet.png" alt="cat getting checkup"></aside>
-        <h1>Need a Vet?</h1>
-        <button>Start Here</button>
-    </section>
-</div>
+        <section class="circle-card">
+            <section>
+                <h2>Planning to Adopt?</h2>
+                <button>Start Here</button>
+            </section>
+            <section>
+                <aside><img src="img/adopt.png" alt="white dog"></aside>
+            </section>
+
+
+        </section>
+        <section class="circle-card">
+            <section>
+                <h2>Need a Vet?</h2>
+                <button>Start Here</button>
+            </section>
+            <section>
+
+                <aside><img src="img/vet.png" alt="cat getting checkup"></aside>
+            </section>
+
+        </section>
+    </div>
 </section>
 
 <section class="heroes">
