too frustrated to continue

--- a/deploy/index.html
+++ b/deploy/index.html
@@ -32,7 +32,7 @@
         <img src="img/hero1.jpg" alt="man with dog">
     </section>
     <section class="css-grid-global">
-    <div>
+    <div id="hero-boxes">
     <section>
         <section>
       
@@ -69,7 +69,10 @@
 
 <section class="css-grid-global">
     <div>
+        <section id="upper-cards">
+            <div class="card-1">
         <section class="circle-card">
+            
             <section>
                 <h2>Planning to Adopt?</h2>
                 <button>Start Here</button>
@@ -80,6 +83,8 @@
 
 
         </section>
+    </div>
+    <div class="card-1">
         <section class="circle-card">
             <section>
                 <h2>Need a Vet?</h2>
@@ -92,13 +97,15 @@
 
         </section>
     </div>
+    </section>
+    </div>
 </section>
 
 <section class="heroes">
     <ul class="heroes">
         <li><img src="img/hero3.jpg" alt="kid with dog"></li>
         <li><img src="img/hero2.jpg" alt="woman kissing cat"></li>
-        <li><img src="img/hero4.jpg" alt="cat being held"></li>
+        <!--<li><img src="img/hero4.jpg" alt="cat being held"></li>-->
     </ul>
 </section> 
 
