--- a/deploy/index.html
+++ b/deploy/index.html
@@ -71,33 +71,33 @@
     <div>
         <section id="upper-cards">
             <div class="card-1">
-        <section class="circle-card">
-            
-            <section>
-                <h2>Planning to Adopt?</h2>
-                <button>Start Here</button>
-            </section>
-            <section>
-                <aside><img src="img/adopt.png" alt="white dog"></aside>
-            </section>
+                <section class="circle-card">
+
+                    <section>
+                        <h2>Planning to Adopt?</h2>
+                        <button>Start Here</button>
+                    </section>
+                    <section>
+                        <aside><img src="img/adopt.png" alt="white dog"></aside>
+                    </section>
 
 
+                </section>
+            </div>
+            <div class="card-1">
+                <section class="circle-card">
+                    <section>
+                        <h2>Need a Vet?</h2>
+                        <button>Start Here</button>
+                    </section>
+                    <section>
+
+                        <aside><img src="img/vet.png" alt="cat getting checkup"></aside>
+                    </section>
+
+                </section>
+            </div>
         </section>
-    </div>
-    <div class="card-1">
-        <section class="circle-card">
-            <section>
-                <h2>Need a Vet?</h2>
-                <button>Start Here</button>
-            </section>
-            <section>
-
-                <aside><img src="img/vet.png" alt="cat getting checkup"></aside>
-            </section>
-
-        </section>
-    </div>
-    </section>
     </div>
 </section>
 
@@ -114,10 +114,10 @@
         <h1>What's New</h1>
     </div>
 </section>
-<section class="cards">
+<section class="cards" id="news">
     <ul>
 
-        <li>
+        <li id="card1">
             <img src="img/card1.jpg" alt="foster kittens">
             <section class="css-grid-global">
                 <div>
@@ -128,7 +128,7 @@
                 </div>
             </section>
         </li>
-        <li>
+        <li id="card2">
             <img src="img/card2.jpg" alt="woman with dog">
             <section class="css-grid-global">
                 <div>
@@ -139,7 +139,7 @@
                 </div>
             </section>
         </li>
-        <li>
+        <li id="card3">
             <img src="img/card3.jpg" alt="dog in kennel">
             <section class="css-grid-global">
                 <div>
@@ -150,7 +150,7 @@
                 </div>
             </section>
         </li>
-        <li>
+        <li id="card4">
             <img src="img/card4.jpg" alt="woman with dog at front desk">
             <section class="css-grid-global">
                 <div>
@@ -161,7 +161,7 @@
                 </div>
             </section>
         </li>
-        <li>
+        <li id="card5">
             <img src="img/card5.jpg" alt="fern the cat">
             <section class="css-grid-global">
                 <div>
