--- a/deploy/index.html
+++ b/deploy/index.html
@@ -217,12 +217,12 @@
 
             </section>
         </section>
-        <section>
+        <section id="newsletter">
             <h3>Newsletter Sign Up</h3>
             <input type="text" placeholder="Email address">
             <button><b>Sign Up</b></button>
         </section>
-        <section>
+        <section id="follow-us">
             <h3>Follow Us</h3>
             <a href="#"><img src="img/youtube.svg" alt="youtube icon"></a>
             <a href="#"><img src="img/twitter.svg" alt="twitter icon"></a>
