--- a/deploy/index.html
+++ b/deploy/index.html
@@ -101,11 +101,11 @@
     </div>
 </section>
 
-<section class="heroes">
-    <ul class="heroes">
-        <li><img src="img/hero3.jpg" alt="kid with dog"></li>
-        <li><img src="img/hero2.jpg" alt="woman kissing cat"></li>
-        <!--<li><img src="img/hero4.jpg" alt="cat being held"></li>-->
+<section id="hero2" class="heroes">
+    <ul>
+        <li id="image1"><img src="img/hero3.jpg" alt="kid with dog"></li>
+        <li id="image2"><img src="img/hero2.jpg" alt="woman kissing cat"></li>
+        <li id="image3" class="show-for-xl"><img src="img/hero4.jpg" alt="cat being held"></li>
     </ul>
 </section> 
 
