--- a/deploy/index.html
+++ b/deploy/index.html
@@ -37,7 +37,7 @@
         <section>
       
             <h3><b>Want to work with us?</b></h3>
-            Click here to learn how
+            <p>Click here to learn how</p>
            
         </section>
         <section>
