--- a/deploy/index.html
+++ b/deploy/index.html
@@ -32,38 +32,42 @@
         <img src="img/hero1.jpg" alt="man with dog">
     </section>
     <section class="css-grid-global">
-    <div id="hero-boxes">
-    <section>
-        <section>
-      
-            <h3><b>Want to work with us?</b></h3>
-            <p>Click here to learn how</p>
-           
-        </section>
-        <section>
-            <button>
-            <b>Details</b>
-            <img src="img/arrow.svg" alt="arrow">
-            </button>
-        </section>
-    </section>
-    <section>
-        <section>
-            <p>
-                <b>Location:</b> Northeast Adoption Center
-            </p>
-            <p>
-                <b>Hours:</b> Tues-Sat 9AM-5PM
-            </p>
-        </section>
-        <section>
-            <button>
-            <b>Details</b>
-            <img src="img/arrow.svg" alt="arrow">
-        </button>
-        </section>
-    </section>
-    </div>
+        <div id="hero-boxes">
+            <section>
+                <section>
+
+                    <h3><b>Want to work with us?</b></h3>
+                    <p>Click here to learn how</p>
+
+                </section>
+                <section>
+                    <button>
+                        <section class="show-for-xl">
+                        <b>Details</b>
+                    </section>
+                        <img src="img/arrow.svg" alt="arrow">
+                    </button>
+                </section>
+            </section>
+            <section>
+                <section>
+                    <p>
+                        <b>Location:</b> Northeast Adoption Center
+                    </p>
+                    <p>
+                        <b>Hours:</b> Tues-Sat 9AM-5PM
+                    </p>
+                </section>
+                <section>
+                    <button>
+                        <section class="show-for-xl">
+                        <b>Details</b>
+                    </section>
+                        <img src="img/arrow.svg" alt="arrow">
+                    </button>
+                </section>
+            </section>
+        </div>
     </section>
 </section>  
 
