global spacing added

--- a/deploy/index.html
+++ b/deploy/index.html
@@ -18,7 +18,7 @@
    </div>
 </header>  
 
-<section class="css-grid-global">
+<section class="css-grid-global content-spacing">
     <div>
     <input type="text" placeholder="Search our animals">
     <button>
@@ -28,7 +28,7 @@
 </section>  
 
 <section>
-    <section class="heroes">
+    <section class="heroes content-spacing">
         <img src="img/hero1.jpg" alt="man with dog">
     </section>
     <section class="css-grid-global">
@@ -42,7 +42,7 @@
                 </section>
                 <section>
                     <button>
-                        <section class="show-for-xl">
+                        <section class="show-for-lg">
                         <b>Details</b>
                     </section>
                         <img src="img/arrow.svg" alt="arrow">
@@ -60,7 +60,7 @@
                 </section>
                 <section>
                     <button>
-                        <section class="show-for-xl">
+                        <section class="show-for-lg">
                         <b>Details</b>
                     </section>
                         <img src="img/arrow.svg" alt="arrow">
@@ -71,7 +71,7 @@
     </section>
 </section>  
 
-<section class="css-grid-global">
+<section class="css-grid-global content-spacing">
     <div>
         <section id="upper-cards">
             
@@ -104,7 +104,7 @@
     </div>
 </section>
 
-<section id="hero2" class="heroes">
+<section id="hero2" class="heroes content-spacing">
     <ul>
         <li id="image1"><img src="img/hero3.jpg" alt="kid with dog"></li>
         <li id="image2"><img src="img/hero2.jpg" alt="woman kissing cat"></li>
@@ -112,7 +112,7 @@
     </ul>
 </section> 
 
-<section class="css-grid-global">
+<section class="css-grid-global content-spacing">
     <div>
         <h1>What's New</h1>
     </div>
@@ -178,7 +178,7 @@
     </ul>
 </section> 
 
-<footer class="css-grid-global">
+<footer class="css-grid-global content-spacing">
     <div>
         <section id="locations">
             <h3>Locations</h3>
