--- a/deploy/index.html
+++ b/deploy/index.html
@@ -71,7 +71,7 @@
     </section>
 </section>  
 
-<section class="css-grid-global content-spacing">
+<section class="css-grid-global content-spacing" id="hero-cards">
     <div>
         <section id="upper-cards">
             
