--- a/deploy/index.html
+++ b/deploy/index.html
@@ -38,7 +38,8 @@
     </section>
     <section class="css-grid-global">
         <div id="hero-boxes">
-            <section>
+           
+            <section class="upper-tab" id="left-box">
                 <section>
 
                     <h3><b>Want to work with us?</b></h3>
@@ -54,7 +55,7 @@
                     </button>
                 </section>
             </section>
-            <section>
+            <section class="upper-tab" id="right-box">
                 <section>
                     <p>
                         <b>Location:</b> Northeast Adoption Center
@@ -72,6 +73,7 @@
                     </button>
                 </section>
             </section>
+        
         </div>
     </section>
 </section>  
