--- a/deploy/index.html
+++ b/deploy/index.html
@@ -42,7 +42,7 @@
             <section class="upper-tab" id="left-box">
                 <section>
 
-                    <h3><b>Want to work with us?</b></h3>
+                    <h3>Want to work with us?</h3>
                     <p>Click here to learn how</p>
 
                 </section>
