--- a/deploy/index.html
+++ b/deploy/index.html
@@ -33,8 +33,8 @@
 </section>  
 
 <section>
-    <section class="heroes content-spacing">
-        <img src="img/hero1.jpg" alt="man with dog">
+    <section id="hero" class="heroes content-spacing">
+       <!-- <img src="img/hero1.jpg" alt="man with dog"> -->
     </section>
     <section>
         <div id="hero-boxes">
