--- a/deploy/index.html
+++ b/deploy/index.html
@@ -88,9 +88,9 @@
 
                     <section>
                         <h2>Planning to Adopt?</h2>
-                        <button>Start Here</button>
+                        <button class="blue-button">Start Here</button>
                     </section>
-                    <section>
+                    <section class="circle-img">
                         <aside><img src="img/adopt.png" alt="white dog"></aside>
                     </section>
 
@@ -100,9 +100,9 @@
                 <section id="vet" class="circle-card">
                     <section>
                         <h2>Need a Vet?</h2>
-                        <button>Start Here</button>
+                        <button class="blue-button">Start Here</button>
                     </section>
-                    <section>
+                    <section class="circle-img">
 
                         <aside><img src="img/vet.png" alt="cat getting checkup"></aside>
                     </section>
@@ -135,7 +135,7 @@
                     <h2>Meet Our Newest Additions</h2>
                     <p>Get to know the 5 newest additions to our adoptable roster.
                         These 12 week old kittens are ready for their forever homes.</p>
-                    <button><b>Read More</b></button>
+                    <button class="blue-button"><b>Read More</b></button>
                 </div>
             </section>
         </li>
@@ -146,7 +146,7 @@
                     <h2>Adoption Event in Old City</h2>
                     <p>PAWS is holding our monthly adoption event in Old City.
                         Come meet all the furry friends looking for their new families.</p>
-                    <button><b>Read More</b></button>
+                    <button class="blue-button"><b>Read More</b></button>
                 </div>
             </section>
         </li>
@@ -157,7 +157,7 @@
                     <h2>New COVID-19 Guidelines</h2>
                     <p>Get up to date on how PAWS is responding to the latest
                         CDC recommendations regarding masks, vaccinations and more.</p>
-                    <button><b>Read More</b></button>
+                    <button class="blue-button"><b>Read More</b></button>
                 </div>
             </section>
         </li>
@@ -168,7 +168,7 @@
                     <h2>Northeast Center Back Open</h2>
                     <p>After closing temporarily during the COVID-19 pandemic,
                         our Northeast Adoption Center is opening its doors again later this month.</p>
-                    <button><b>Read More</b></button>
+                    <button class="blue-button"><b>Read More</b></button>
                 </div>
             </section>
         </li>
@@ -179,7 +179,7 @@
                     <h2>Meet Fern the Fighter Foster</h2>
                     <p>One of our most recent foster cats, Fern went from surviving on the
                         streets to thriving in the care of her foster home.</p>
-                    <button><b>Read More</b></button>
+                    <button class="blue-button"><b>Read More</b></button>
                 </div>
             </section>
         </li>
