all images bg img

--- a/deploy/index.html
+++ b/deploy/index.html
@@ -129,8 +129,8 @@
 <section class="cards" id="news">
     <ul>
         <li id="card1">
-            <img src="img/card1.jpg" alt="foster kittens">
-            <section class="css-grid-global card-text">
+           <aside></aside>
+            <section class="card-text">
                 <div>
                     <h2>Meet Our Newest Additions</h2>
                     <p>Get to know the 5 newest additions to our adoptable roster.
@@ -140,8 +140,8 @@
             </section>
         </li>
         <li id="card2">
-            <img src="img/card2.jpg" alt="woman with dog">
-            <section class="css-grid-global card-text">
+           <aside></aside>
+            <section class="card-text">
                 <div>
                     <h2>Adoption Event in Old City</h2>
                     <p>PAWS is holding our monthly adoption event in Old City.
@@ -151,8 +151,8 @@
             </section>
         </li>
         <li id="card3">
-            <img src="img/card3.jpg" alt="dog in kennel">
-            <section class="css-grid-global card-text">
+           <aside></aside>
+            <section class="card-text">
                 <div>
                     <h2>New COVID-19 Guidelines</h2>
                     <p>Get up to date on how PAWS is responding to the latest
@@ -162,8 +162,8 @@
             </section>
         </li>
         <li id="card4">
-            <img src="img/card4.jpg" alt="woman with dog at front desk">
-            <section class="css-grid-global card-text">
+            <aside></aside>
+            <section class="card-text">
                 <div>
                     <h2>Northeast Center Back Open</h2>
                     <p>After closing temporarily during the COVID-19 pandemic,
@@ -173,8 +173,8 @@
             </section>
         </li>
         <li id="card5">
-            <img src="img/card5.jpg" alt="fern the cat">
-            <section class="css-grid-global card-text">
+            <aside></aside>
+            <section class="card-text">
                 <div>
                     <h2>Meet Fern the Fighter Foster</h2>
                     <p>One of our most recent foster cats, Fern went from surviving on the
