i cannot get the js working

--- a/deploy/index.html
+++ b/deploy/index.html
@@ -25,7 +25,7 @@
           <i class="fa-solid fa-bars"></i>
       </button>
   </aside>
-   <nav id="nav-menu">
+   <nav id="main-menu">
        <aside class="hide-for-lg">
           <button id="close-button">
              <i class="fa-solid fa-xmark-large"></i>
