--- a/deploy/index.html
+++ b/deploy/index.html
@@ -21,13 +21,13 @@
     <img src="img/logo.svg" alt="logo">
    </section>
    <aside id="burger-area">
-      <button id="burger-button">
+      <button id="burger-btn">
           <i class="fa-solid fa-bars"></i>
       </button>
   </aside>
    <nav id="main-menu">
        <aside class="hide-for-lg">
-          <button id="close-button">
+          <button id="close-btn">
              <i class="fa-solid fa-xmark-large"></i>
           </button>
        </aside>
@@ -44,7 +44,7 @@
 
 
 
-<section class="css-grid-global content-spacing">
+<section id="search" class="css-grid-global content-spacing">
     <div>
         <form id="search-form" action="#">
             <input id="search-bar" type="text" placeholder="Search our animals">
