--- a/deploy/index.html
+++ b/deploy/index.html
@@ -4,12 +4,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@400;700&family=Barlow:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Starting Template</title>
+    <title>Vault and Vine</title>
 </head>
 
 <body>
     <script src="js/scripts-min.js"></script>
+    <header>
+            <div>
+                <section id="logo">
+                    <img src="img/logo.png" alt="logo">
+                </section>
+            </div>
+        </header>
+    <section>
+                <div>
+                    <section>
+                        <img src="img/homepage-hero.jpg" alt="cacti">
+                    </section>
+                    <section>
+                        <p>
+                            Welcome to Vault + Vine. We are a floral studio and thoughtfully curated retail space in East Falls, Philadelphia. Founded in 2017, our small group of humans are working together to shape the world we wish to live in.
+                        </p>
+                    </section>
+                </div>
+            </section>
+    <section>
+                    <div>
+                    <ul>
+                        <li>
+                            <h1>OUR STORY</h1>
+                            <img src="img/our-story.jpg" alt="our story">
+                            Vault + Vine aspires to support our community however we can. Learn more about us and our mission.
+                        </li>
+                    </ul>
+                </div>
+                </section>
+    
 </body>
 
 </html>
