--- a/deploy/index.html
+++ b/deploy/index.html
@@ -38,7 +38,30 @@
                         <li>
                             <h1>OUR STORY</h1>
                             <img src="img/our-story.jpg" alt="our story">
-                            Vault + Vine aspires to support our community however we can. Learn more about us and our mission.
+                            <p>Vault + Vine aspires to support our community however we can. 
+                                Learn more about us and our mission.</p>
+                            <button><img src="img/arrow-right.svg" alt="arrow"></button>
+                        </li>
+                        <li>
+                            <h1>SHOP</h1>
+                            <img src="img/shop.jpg" alt="shop">
+                            <p>Let Vault + Vine be your one stop shop for gifts and other items. 
+                                Shop our local, sustainable, and unique offerings.</p>
+                            <button><img src="img/arrow-right.svg" alt="arrow"></button>
+                        </li>
+                        <li>
+                            <h1>CAFÉ</h1>
+                            <img src="img/cafe.jpg" alt="cafe">
+                            <p>Enjoy locally sourced coffee, tea and pastries at our in house café. 
+                                Check out our café hours and plan your visit..</p>
+                            <button><img src="img/arrow-right.svg" alt="arrow"></button>
+                        </li>
+                        <li>
+                            <h1>FLORA</h1>
+                            <img src="img/plants.jpg" alt="flora">
+                            <p>Vault + Vine offers a wide variety of locally grown and sourced flowers and other plants.
+                                 Come in and browse our selection or order your arrangement online.</p>
+                            <button><img src="img/arrow-right.svg" alt="arrow"></button>
                         </li>
                     </ul>
                 </div>
