--- a/deploy/index.html
+++ b/deploy/index.html
@@ -66,6 +66,41 @@
                     </ul>
                 </div>
                 </section>
+    <section>
+                        <div>
+                            <h1>ABOUT US</h1>
+                            <p>Vault + Vine is a floral studio and thoughtfully curated retail 
+                                space in East Falls, Philadelphia. Founded in 2017, we offer:</p>
+                                <aside><img src="img/about-us-2.jpeg" alt="flowers"></aside>
+                            <ul>
+                                <li>
+                                    Floral design services for weddings and events; 
+                                </li>
+                                <li>
+                                    Custom floral arrangements made daily and delivered;
+                                </li>
+                                <li>
+                                    Plants for the home and garden;
+                                </li>
+                                <li>
+                                    A collection of specialty homegoods, gifts, 
+                                    and objects (many sourced from Philadelphia-area creators);
+                                </li>
+                                <li>
+                                    A café and gathering place.
+                                </li>
+                            </ul>
+                            <aside><img src="img/about-us-1.jpg" alt="more flowers"></aside>
+                            <p>At the heart of our shop is love for our community and a desire to create, promote, 
+                                and connect with our neighbors. Our vision is to create a community  </p>
+                                <p>of businesses and customers that supports, promotes, and celebrates the local and global economy
+                                     and by demanding accountability in every aspect of the supply chain.</p>
+                            <p class="show-for-md">At the heart of our shop is love for our community and a desire to create, promote, 
+                                and connect with our neighbors. Our vision is to create a community of businesses 
+                                and customers that supports, promotes, and celebrates the local and global economy and by 
+                                demanding accountability in every aspect of the supply chain.</p>
+                        </div>
+                    </section>
     
 </body>
 
