--- a/deploy/index.html
+++ b/deploy/index.html
@@ -8,7 +8,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@400;700&family=Barlow:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Vault and Vine</title>
+    <title>Vault + Vine</title>
 </head>
 
 <body>
@@ -101,7 +101,38 @@
                                 demanding accountability in every aspect of the supply chain.</p>
                         </div>
                     </section>
-    
+    <footer>
+                            <div>
+                                <section id="contact">
+                                    <section>
+                                        <a href="#">
+                                        <img src="img/phone.svg" alt="phone">
+                                        <h3>267-331-6292</h3>
+                                    </a>
+                                    </section>
+                                    <section>
+                                        <a href="#">
+                                        <img src="img/mail.svg" alt="mail">
+                                        <h3 class="show-for-md">Contact us</h3>
+                                    </a>
+                                    </section>
+                                </section>
+                                <section id="socials">
+                                    <a href="#"><img src="img/instagram.svg" alt="instagram"></a>
+                                    <a href="#"><img src="img/facebook.svg" alt="facebook"></a>
+                                    <a href="#"><img src="img/twitter.svg" alt="twitter"></a>
+                                </section>
+                                <section id="priv-policy">
+                                    <a href="#">PRIVACY POLICY</a>
+                                </section>
+                                <section id="llc">
+                                    <p>2022 VAULT + VINE LLC.</p>
+                                </section>
+                                <section id="rights">
+                                    <p>ALL RIGHTS RESERVED</p>
+                                </section>
+                            </div>
+                        </footer>
 </body>
 
 </html>
