--- a/deploy/index.html
+++ b/deploy/index.html
@@ -16,8 +16,13 @@
     <header>
             <div>
                 <section id="logo">
+                    <a href="index.html">
                     <img src="img/logo.png" alt="logo">
+                </a>
                 </section>
+                <nav>
+                    <a href="flora.html">Flora</a>
+                </nav>
             </div>
         </header>
     <section>
