--- a/deploy/flora.html
+++ b/deploy/flora.html
@@ -16,43 +16,117 @@
     <header>
             <div>
                 <section id="logo">
+                    <a href="index.html">
                     <img src="img/logo.png" alt="logo">
+                </a>
                 </section>
+                <nav>
+                    <a href="flora.html">Flora</a>
+                </nav>
             </div>
         </header>
-
-    <footer>
-        <div>
-            <section id="contact">
-                <section>
-                    <a href="#">
-                    <img src="img/phone.svg" alt="phone">
-                    <h3>267-331-6292</h3>
-                </a>
-                </section>
-                <section>
-                    <a href="#">
-                    <img src="img/mail.svg" alt="mail">
-                    <h3 class="show-for-md">Contact us</h3>
-                </a>
-                </section>
-            </section>
-            <section id="socials">
-                <a href="#"><img src="img/instagram.svg" alt="instagram"></a>
-                <a href="#"><img src="img/facebook.svg" alt="facebook"></a>
-                <a href="#"><img src="img/twitter.svg" alt="twitter"></a>
-            </section>
-            <section id="priv-policy">
-                <a href="#">PRIVACY POLICY</a>
-            </section>
-            <section id="llc">
-                <p>2022 VAULT + VINE LLC.</p>
-            </section>
-            <section id="rights">
-                <p>ALL RIGHTS RESERVED</p>
-            </section>
+<section>
+            <img src="img/flora-hero.jpg" alt="flora hero">
+        </section>
+        <section>
+            <div>
+                <h1>FLORA</h1>
+                <p>
+                    We carry a wide variety of different plants and flowers ready 
+                    for any occasion. Whether you want a houseplant for yourself or 
+                    an arrangement for a large gathering, Vault + Vine has you 
+                    covered. A majority of our flora is locally grown by 
+                    Philadelphia area growers and those that aren’t are 
+                    environmentally friendly and ethically sourced. 
+         
+                </p>
+            </div>
+        </section>
+<section>
+            <div>
+            <ul>
+                <li>
+                    <h1>FLOWERS</h1>
+                    <img src="img/about-us-1.jpg" alt="flowers">
+                    <p>We love to surround ourselves with flowers and other exquisite 
+                        bits of the natural world, and want to do the same for our clients. 
+                        Flowers often say what words cannot, and this is what we’re always 
+                        after: sharing a feeling and capturing everything we can’t put into 
+                        words.</p>
+                    <button><img src="img/arrow-right.svg" alt="arrow"></button>
+                </li>
+                <li>
+                    <h1>PLANTS</h1>
+                    <img src="img/plants.jpg" alt="plants">
+                    <p>Whether you’ re after something seasonal for the patio, an elegantly 
+                        planted gift, or the perfect arrangement that will live on even after 
+                        a party, Vault + Vine has you covered. Find the perfect plants for 
+                        inside, outside, and anywhere in between. From heat loving succulents
+                         to houseplants that we promise are almost impossible to kill, we’ ll 
+                         help find the plants for you. We provide creative expertise and unique
+                          plants tailored to your space, event, and personality.</p>
+                    <button><img src="img/arrow-right.svg" alt="arrow"></button>
+                </li>
+            </ul>
         </div>
-    </footer>
+        </section>
+<section>
+            <div>
+                <section>
+                    <p>Want your arrangment 
+                        delivered? Check and see if we deliver to your zipcode.</p>
+                </section>
+                <section>
+                    <form action="#">
+                        <input type="text">
+                        <button><img src="img/arrow-right.svg" alt="arrow"></button>
+                    </form>
+                </section>
+            </div>
+        </section>
+<section>
+            <section>
+                <p>
+                    Not a plant person? We’ve got you covered. 
+                    From locally sourced coffee and tea to handmade candles, 
+                    Vault + Vine has a product for everyone. 
+                </p>
+                <a href="#">Check out our shop here<img src="img/arrow-right.svg" alt="arrow"></a>
+            </section>
+        <aside><img src="img/flora-shop.jpg" alt="shop"></aside>
+        </section>
+    <footer>
+                <div>
+                    <section id="contact">
+                        <section>
+                            <a href="#">
+                            <img src="img/phone.svg" alt="phone">
+                            <h3>267-331-6292</h3>
+                        </a>
+                        </section>
+                        <section>
+                            <a href="#">
+                            <img src="img/mail.svg" alt="mail">
+                            <h3 class="show-for-md">Contact us</h3>
+                        </a>
+                        </section>
+                    </section>
+                    <section id="socials">
+                        <a href="#"><img src="img/instagram.svg" alt="instagram"></a>
+                        <a href="#"><img src="img/facebook.svg" alt="facebook"></a>
+                        <a href="#"><img src="img/twitter.svg" alt="twitter"></a>
+                    </section>
+                    <section id="priv-policy">
+                        <a href="#">PRIVACY POLICY</a>
+                    </section>
+                    <section id="llc">
+                        <p>2022 VAULT + VINE LLC.</p>
+                    </section>
+                    <section id="rights">
+                        <p>ALL RIGHTS RESERVED</p>
+                    </section>
+                </div>
+            </footer>
 </body>
 
 </html>
