--- a/deploy/index.html
+++ b/deploy/index.html
@@ -28,18 +28,22 @@
     <section>
                 <div>
                     <section>
-                        <img src="img/homepage-hero.jpg" alt="cacti">
+                        <img class="hero-img" src="img/homepage-hero.jpg" alt="cacti">
                     </section>
-                    <section>
+                    <section class="css-grid-global">
+                        <div>
                         <p>
-                            Welcome to Vault + Vine. We are a floral studio and thoughtfully curated retail space in East Falls, Philadelphia. Founded in 2017, our small group of humans are working together to shape the world we wish to live in.
+                            Welcome to Vault + Vine. We are a floral studio and thoughtfully 
+                            curated retail space in East Falls, Philadelphia. Founded in 2017, 
+                            our small group of humans are working together to shape the world we wish to live in.
                         </p>
+                    </div>
                     </section>
                 </div>
             </section>
-    <section>
+    <section id="homepage-cards" class="css-grid-global">
                     <div>
-                    <ul>
+                    <ul class="cards">
                         <li>
                             <h1>OUR STORY</h1>
                             <img src="img/our-story.jpg" alt="our story">
