--- a/deploy/index.html
+++ b/deploy/index.html
@@ -25,14 +25,14 @@
                 </nav>
             </div>
         </header>
-    <section>
+    <section id="hero">
                 <div>
                     <section>
                         <img class="hero-img" src="img/homepage-hero.jpg" alt="cacti">
                     </section>
                     <section class="css-grid-global">
                         <div>
-                        <p>
+                        <p id="hero-text">
                             Welcome to Vault + Vine. We are a floral studio and thoughtfully 
                             curated retail space in East Falls, Philadelphia. Founded in 2017, 
                             our small group of humans are working together to shape the world we wish to live in.
@@ -45,37 +45,53 @@
                     <div>
                     <ul class="cards">
                         <li>
+                            <section class="css-grid-global">
+                                <div>
                             <h1>OUR STORY</h1>
-                            <img src="img/our-story.jpg" alt="our story">
+                            <img class="card-img" src="img/our-story.jpg" alt="our story">
                             <p>Vault + Vine aspires to support our community however we can. 
                                 Learn more about us and our mission.</p>
                             <button><img src="img/arrow-right.svg" alt="arrow"></button>
+                        </div>
+                        </section>
                         </li>
                         <li>
+                            <section class="css-grid-global">
+                                <div>
                             <h1>SHOP</h1>
-                            <img src="img/shop.jpg" alt="shop">
+                            <img class="card-img" src="img/shop.jpg" alt="shop">
                             <p>Let Vault + Vine be your one stop shop for gifts and other items. 
                                 Shop our local, sustainable, and unique offerings.</p>
                             <button><img src="img/arrow-right.svg" alt="arrow"></button>
+                        </div>
+                    </section>
                         </li>
                         <li>
+                            <section class="css-grid-global">
+                                <div>
                             <h1>CAFÉ</h1>
-                            <img src="img/cafe.jpg" alt="cafe">
+                            <img class="card-img" src="img/cafe.jpg" alt="cafe">
                             <p>Enjoy locally sourced coffee, tea and pastries at our in house café. 
                                 Check out our café hours and plan your visit..</p>
                             <button><img src="img/arrow-right.svg" alt="arrow"></button>
+                        </div>
+                    </section>
                         </li>
                         <li>
+                            <section class="css-grid-global">
+                                <div>
                             <h1>FLORA</h1>
-                            <img src="img/plants.jpg" alt="flora">
+                            <img class="card-img" src="img/plants.jpg" alt="flora">
                             <p>Vault + Vine offers a wide variety of locally grown and sourced flowers and other plants.
                                  Come in and browse our selection or order your arrangement online.</p>
                             <button><img src="img/arrow-right.svg" alt="arrow"></button>
+                        </div>
+                    </section>
                         </li>
                     </ul>
                 </div>
                 </section>
-    <section>
+    <section id="about-us" class="css-grid-global">
                         <div>
                             <h1>ABOUT US</h1>
                             <p>Vault + Vine is a floral studio and thoughtfully curated retail 
